--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="stilos.css">
 	<link rel="stylesheet" type="text/javascript" href="script.js">
-	<link rel="shortcut icon" href="cormaxs.site/logo.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="logo.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PELISKAL</title>
 
