--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	 <link rel="canonical" href="https://peliskal.com.ar">
+	 <meta name="description" content="Disfruta de una amplia variedad de canales de televisión en línea desde Peliskal">
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="stilos.css">
-	<link rel="stylesheet" type="text/javascript" href="script.js">
 	<link rel="shortcut icon" href="logo.ico" type="image/x-icon">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PELISKAL</title>
-
-
 </head>
 <body>
 	<header>PELISKAL</header>
 	<input type="text" id="channel-search" oninput="searchChannels()" placeholder="Buscar canales...">
 <div id="contiene">
   	<ul id="channel-list"></ul>
-  	<div id="video_container" ><video id="player" controls></video></div>
+  	<div id="video_container" ><video id="player" controls width="720" height="480" ></video></div>
 </body>
 </div>
 
- <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-  <script src="script.js"></script>
+ 
 <footer>
 	<div id="texto"><p>
-		Somos una pagina de Television Online, donde podras disfrutar de diversos canales de Television que se encuentran de forma gratuita con un rendimiento como ninguna otra pagina.
+		Somos una pagina de Television Online (peliskal), donde podras disfrutar de diversos canales de Television mayormente de argentina, como telefe, el trece, TN, LN+, cartoon network, cartoonito, etc. Lo mejor de todo es que se encuentran de forma gratuita con un rendimiento como ninguna otra pagina.
 	</p></div>
 	<ul>CONTACTO
 		<ol id="oll"><a href="https://t.me/peliskal" >telegram</a></ol>
 	</ul>
 	<ul>+INFO
-		<ol id="oll"><a href="dmca.html" >DMCA</a></ol>
+		<ol id="oll"><a href="peliskal.com.ar/dmca.html" >DMCA</a></ol>
+	</ul>
+	<ul>REDES
+		<ol id="oll"><a href="https://www.youtube.com/@pelisk" >youtube</a></ol>
 	</ul>
 	<div id="copy"><p>© CORMAXS |2023| </p></div>
 </footer>
 </html>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="script.js"></script>
