--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 	<div id="copy"><p>© CORMAXS |2023| </p></div>
 </footer>
 </html>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="stilos.css">
 	<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="script.js"></script>
