--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="menu">
            <a href=""> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
            <ol class="lista">
-            <li>peliculas</li>
+            <li><a href="Api/mostrar.html"></a>Api</li>
             <li>series</li>
             <li>aplicaciones</li>
            </ol>
