--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.ico" type="image/x-icon">
     <meta name="description" content="Peliskal donde podes ver todas tus series, peliculas y dibujos favoritos de forma gratuita">
+
     <link rel="stylesheet" href="index.css">
     <script src="listaPeliculas.js"></script>
-    
     <title>Peliskal</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="menu">
            <a href=""> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
            <ol class="lista">
-            <li><a href="Api/mostrar.html">Api</a></li>
+            <li><a href="Api/mostrar.html"></a>Api</li>
             <li>series</li>
             <li>aplicaciones</li>
            </ol>
@@ -36,7 +36,8 @@
             <p>© 2024 Peliskal , Peliculas, Series y mucho mas</p>
         </div>
     </footer>
-    <script src="index.js"type="module" ></script>
+    <script src="index.js"></script>
+    <script src="auxiliar.js" defer></script>
     <script src="lazyload.js"></script>
 </body>
 </html>
