--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" type="image/x-webp">
     <link rel="stylesheet" href="index.css">
     <script src="listaPeliculas.js"></script>
-    <title>Peliskal.com.ar</title>
+    <title>Peliskal</title>
 </head>
 <body>
     <header>
@@ -32,8 +32,8 @@
     <footer>
         <div class="contienefoo">
             <ol>
-                <li><a href="">Condiciones de servicio</a></li>
-                <li><a href="">Política de privacidad</a></li>
+                <li><a href="politicas/PolíticadePrivacidad.html"> Política de Privacidad</a></li>
+                <li><a href="politicas/DMC.html">DMC</a></li>
                 <li><a href="https://www.instagram.com/tweb.uno/?igsh=djFqNXprcXpmdGds" target="_blank">Contacto</a></li>
             </ol>
             <p>© 2024 Peliskal , Peliculas, Series y mucho mas</p>
