--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index.css">
     <script src="listaPeliculas.js"></script>
     <title>Peliskal</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5933305559914134"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
