--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
             <ol class="ol-menu">
-                <li><a href="https://peliskal.com.ar/peliculas/peliculas/peliculas.html">Peliculas</a></li>
+                <li><a href="https://peliskal.com.ar/peliculas/peliculas.html">Peliculas</a></li>
                 <li><a href="https://peliskal.com.ar/series/series.html">series</a></li>
             </ol>
             <div class="buscadorContainer">
@@ -42,8 +42,8 @@
     <footer>
         <div class="contienefoo">
             <ol>
-                <li><a href="politicas/PolíticadePrivacidad.html"> Política de Privacidad</a></li>
-                <li><a href="politicas/DMC.html">DMC</a></li>
+                <li><a href="https://peliskal.com.ar/politicas/PolíticadePrivacidad.html"> Política de Privacidad</a></li>
+                <li><a href="https://peliskal.com.ar/politicas/DMC.html">DMC</a></li>
                 <li><a href="https://www.instagram.com/tweb.uno/?igsh=djFqNXprcXpmdGds" target="_blank">Contacto</a></li>
             </ol>
             <p>© 2024 Peliskal , Peliculas, Series y mucho mas</p>
