--- a/politicas/DMC.html
+++ b/politicas/DMC.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Peliskal donde podes ver todas tus series, peliculas y dibujos favoritos de forma gratuita">
     <link rel="icon" href="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" type="image/x-webp">
     <link rel="stylesheet" href="general.css">
-    <title>Peliskal</title>
+    <link rel="stylesheet" href="https://peliskal.com.ar/css/menu.css">
+    <link rel="stylesheet" href="https://peliskal.com.ar/js/buscador.js">
+    <script src="https://peliskal.com.ar/js/meta.js" defer></script>
+    <title>Peliskal-DMC</title>
 </head>
 <body>
     <header>
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
-
+            <ol class="ol-menu">
+                <li><a href="https://peliskal.com.ar/peliculas/peliculas.html">Peliculas</a></li>
+                <li><a href="https://peliskal.com.ar/series/series.html">series</a></li>
+            </ol>
             <div class="buscadorContainer">
            <input type="text" name="busacdor" id="buscador" placeholder="busca tu serie">
            <button class="buscadorBtn">
@@ -21,7 +26,7 @@
               </svg>
            </button>
              </div>
-        </div>
+            </div>
     </header>
 
     <main>
@@ -76,8 +81,8 @@
     <footer>
         <div class="contienefoo">
             <ol>
-                <li><a href="PolíticadePrivacidad.html"> Política de Privacidad</a></li>
-                <li><a href="DMC.html">DMC</a></li>
+                <li><a href="https://peliskal.com.ar/PolíticadePrivacidad.html"> Política de Privacidad</a></li>
+                <li><a href="https://peliskal.com.ar/DMC.html">DMC</a></li>
                 <li><a href="https://www.instagram.com/tweb.uno/?igsh=djFqNXprcXpmdGds" target="_blank">Contacto</a></li>
             </ol>
             <p>© 2024 Peliskal , Peliculas, Series y mucho mas</p>
