--- a/peliculas/peliculas.html
+++ b/peliculas/peliculas.html
@@ -12,6 +12,7 @@
     <script src="../js/lazyload.js" defer></script>
     <script src="../js/meta.js" defer></script>
     <title>Peliskal-peliculas</title>
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [" terabox.com, 1024tera.com, freeterabox.com, terabox.app, instagram.com"], blacklist: []});</script>
 </head>
 <body>
     <header>
