--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="js/buscador.js"></script>
     <script src="js/lazyload.js" defer></script>
     <title>Peliskal</title>
-    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [" terabox.com, 1024tera.com, freeterabox.com, terabox.app, instagram.com"], blacklist: []});</script>
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
 </head>
 <body>
     <header>
