--- a/politicas/DMC.html
+++ b/politicas/DMC.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://peliskal.com.ar/js/buscador.js">
     <script src="https://peliskal.com.ar/js/meta.js" defer></script>
     <title>Peliskal-DMC</title>
-    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [" terabox.com, 1024tera.com, freeterabox.com, terabox.app, instagram.com"], blacklist: []});</script>
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
 </head>
 <body>
     <header>
