--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script src="js/buscador.js"></script>
     <script src="js/lazyload.js" defer></script>
     <title>Peliskal</title>
-    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
-</head>
+   <!-- <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
+--></head>
 <body>
     <header>
         <div class="menu">
