--- a/series/series.html
+++ b/series/series.html
@@ -12,8 +12,9 @@
     <script src="../js/lazyload.js" defer></script>
     <script src="../js/meta.js" defer></script>
     <title>Peliskal-series</title>
+    <!--
     <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
-</head>
+--></head>
 <body>
     <header>
         <div class="menu">
