--- a/reproductor/reproducir.html
+++ b/reproductor/reproducir.html
@@ -40,8 +40,8 @@
 
         <div class="visor">
             <!--  -->  
-           <h4 class="viendo">capitulo</h4>
-            <iframe src="https://terabox.com/sharing/embed?surl=9uq28LAXaFHOyG8E0ewYuw&amp;resolution=480&amp;autoplay=trueslid=" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+           <h4 class="viendo">Capitulo</h4>
+            <iframe src="https://terabox.com/sharing/embed?surl=&amp;resolution=480&amp;autoplay=trueslid=" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
     
         </div>
     </main>
