--- a/reproductor/reproducir.html
+++ b/reproductor/reproducir.html
@@ -13,7 +13,6 @@
     <script src="https://peliskal.com.ar/js/meta.js" defer></script>
     <script src="../js/listaCompleta/controles.js" defer></script>
     <script src="../js/listaCompleta/listaCompletaGeneral.js" ></script>
-    <script src="../js/meta.js" defer></script>
     <title>Peliskal</title>
 </head>
 <body>
@@ -40,7 +39,7 @@
 
         <div class="visor">
             <!--  -->  
-           <h4 class="viendo">Capitulo</h4>
+           <h4 class="viendo"></h4>
             <iframe src="https://terabox.com/sharing/embed?surl=&amp;resolution=480&amp;autoplay=trueslid=" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
     
         </div>
