--- a/Peliculas/peliculas.html
+++ b/Peliculas/peliculas.html
@@ -12,13 +12,16 @@
     <script src="../js/lazyload.js" defer></script>
     <script src="../js/meta.js" defer></script>
     <title>Peliskal-peliculas</title>
+    <!--
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
+-->
 </head>
 <body>
     <header>
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
             <ol class="ol-menu">
-                <li><a href="https://peliskal.com.ar/peliculas/peliculas/peliculas.html">Peliculas</a></li>
+                <li><a href="https://peliskal.com.ar/peliculas/peliculas.html">Peliculas</a></li>
                 <li><a href="https://peliskal.com.ar/series/series.html">series</a></li>
             </ol>
             <div class="buscadorContainer">
