--- a/Series/series.html
+++ b/Series/series.html
@@ -12,13 +12,15 @@
     <script src="../js/lazyload.js" defer></script>
     <script src="../js/meta.js" defer></script>
     <title>Peliskal-series</title>
-</head>
+    <!--
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
+--></head>
 <body>
     <header>
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
             <ol class="ol-menu">
-                <li><a href="https://peliskal.com.ar/peliculas/peliculas/peliculas.html">Peliculas</a></li>
+                <li><a href="https://peliskal.com.ar/peliculas/peliculas.html">Peliculas</a></li>
                 <li><a href="https://peliskal.com.ar/series/series.html">series</a></li>
             </ol>
             <div class="buscadorContainer">
@@ -39,8 +41,8 @@
     <footer>
         <div class="contienefoo">
             <ol>
-                <li><a href="politicas/PolíticadePrivacidad.html"> Política de Privacidad</a></li>
-                <li><a href="politicas/DMC.html">DMC</a></li>
+                <li><a href="https://peliskal.com.ar/politicas/PolíticadePrivacidad.html"> Política de Privacidad</a></li>
+                <li><a href="https://peliskal.com.ar/politicas/DMC.html">DMC</a></li>
                 <li><a href="https://www.instagram.com/tweb.uno/?igsh=djFqNXprcXpmdGds" target="_blank">Contacto</a></li>
             </ol>
             <p>© 2024 Peliskal , Peliculas, Series y mucho mas</p>
