--- a/Series/series.html
+++ b/Series/series.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" type="image/x-webp">
+    <link rel="icon" href="https://peliskal.com.ar/iconoPeliskal.ico" type="image/x-ico">
     <link rel="stylesheet" href="../css/general.css">
     <link rel="stylesheet" href="../css/menu.css">
     <script src="../js/creaListas.js" type="module"></script>
-    <script src="../js/listaSeries.js"></script>
+    <script src="../js/listaCompleta/listaCompletaGeneral.js"></script>
     <script src="../js/buscador.js"></script>
     <script src="../js/lazyload.js" defer></script>
     <script src="../js/meta.js" defer></script>
@@ -20,8 +20,8 @@
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
             <ol class="ol-menu">
-                <li><a href="https://peliskal.com.ar/peliculas/peliculas.html">Peliculas</a></li>
-                <li><a href="https://peliskal.com.ar/series/series.html">series</a></li>
+                <li><a href="https://peliskal.com.ar/Peliculas/peliculas.html">Peliculas</a></li>
+                <li><a href="https://peliskal.com.ar/Series/series.html">series</a></li>
             </ol>
             <div class="buscadorContainer">
            <input type="text" name="busacdor" id="buscador" placeholder="busca tu serie">
