--- a/politicas/PolíticadePrivacidad.html
+++ b/politicas/PolíticadePrivacidad.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" type="image/x-webp">
+    <link rel="icon" href="https://peliskal.com.ar/iconoPeliskal.ico" type="image/x-ico">
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="https://peliskal.com.ar/css/menu.css">
     <link rel="stylesheet" href="https://peliskal.com.ar/js/buscador.js">
     <script src="https://peliskal.com.ar/js/meta.js" defer></script>
     <title>Peliskal-politicas de privacidad</title>
+    <script src="https://peliskal.com.ar/js/meta.js" defer></script>
     <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
 </head>
 <body>
@@ -16,8 +17,8 @@
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
             <ol class="ol-menu">
-                <li><a href="https://peliskal.com.ar/peliculas/peliculas.html">Peliculas</a></li>
-                <li><a href="https://peliskal.com.ar/series/series.html">series</a></li>
+                <li><a href="https://peliskal.com.ar/Peliculas/peliculas.html">Peliculas</a></li>
+                <li><a href="https://peliskal.com.ar/Series/series.html">series</a></li>
             </ol>
             <div class="buscadorContainer">
            <input type="text" name="busacdor" id="buscador" placeholder="busca tu serie">
