--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header>
         <div class="menu">
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
-            <ol class="ol-menu">
-                <li><a href="https://peliskal.com.ar/Peliculas/peliculas.html">Peliculas</a></li>
-                <li><a href="https://peliskal.com.ar/Series/series.html">series</a></li>
-            </ol>
-            <div class="buscadorContainer">
+           <ol class="ol-menu">
+            <li><a href="https://peliskal.com.ar/Peliculas/peliculas.html">Peliculas</a></li>
+            <li><a href="https://peliskal.com.ar/Series/Series.html">series</a></li>
+        </ol> 
+           <div class="buscadorContainer">
            <input type="text" name="busacdor" id="buscador" placeholder="busca tu serie">
            <button class="buscadorBtn">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -30,6 +30,7 @@
               </svg>
            </button>
              </div>
+             
             </div>
     </header>
     
