--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
            <ol class="ol-menu">
             <li><a href="https://peliskal.com.ar/Peliculas/peliculas.html">Peliculas</a></li>
-            <li><a href="https://peliskal.com.ar/Series/Series.html">series</a></li>
+            <li><a href="https://peliskal.com.ar/Series/series.html">Series</a></li>
         </ol> 
            <div class="buscadorContainer">
            <input type="text" name="busacdor" id="buscador" placeholder="busca tu serie">
