--- a/Series/series.html
+++ b/Series/series.html
@@ -24,7 +24,7 @@
             <li><a href="https://peliskal.com.ar/Series/series.html">Series</a></li>
         </ol> 
            <div class="buscadorContainer">
-           <input type="text" name="busacdor" id="buscador" placeholder="busca tu serie">
+           <input type="text" name="busacdor" id="buscador" placeholder="buscar serie">
            <button class="buscadorBtn">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
@@ -36,8 +36,58 @@
     </header>
     
     <main>
+        <div class="publicidad">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '33358790419c4d8e10f8d25161b3d354',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.topcreativeformat.com/33358790419c4d8e10f8d25161b3d354/invoke.js"></script>
+
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '6243af54e4018d894cf3ca1470fded93',
+                    'format' : 'iframe',
+                    'height' : 90,
+                    'width' : 728,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.topcreativeformat.com/6243af54e4018d894cf3ca1470fded93/invoke.js"></script>
+        </div>
     </main>
 
+
+    <div class="publicidad">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '1a4505a81c84e0843f53ff0ae0d8c0a2',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.topcreativeformat.com/1a4505a81c84e0843f53ff0ae0d8c0a2/invoke.js"></script>
+
+
+
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '9b075d6f17f0d6bfe8604b92a11c05d4',
+                'format' : 'iframe',
+                'height' : 300,
+                'width' : 160,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.topcreativeformat.com/9b075d6f17f0d6bfe8604b92a11c05d4/invoke.js"></script>
+
+    </div>
     
     <footer>
         <div class="contienefoo">
