--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Peliskal donde podes ver todas tus series, peliculas y dibujos favoritos de forma gratuita">
+    <meta name="description" content="Disfruta de series, películas y dibujos animados gratis en Peliskal. ¡Tu portal de entretenimiento sin límites!">
     <link rel="icon" href="https://peliskal.com.ar/iconoPeliskal.ico" type="image/x-ico">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -12,6 +12,7 @@
     <script src="js/lazyload.js"  defer></script>
     <script src="js/buscador.js"></script>
     <title>Peliskal</title>
+    <meta name="keywords" content="peliskal, peliculas, cartoons, series">
    <!-- <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
 --></head>
 <body>
