--- a/reproductor/reproducir.html
+++ b/reproductor/reproducir.html
@@ -29,7 +29,11 @@
         <div class="visor">
         
            <h4 class="viendo"></h4>    
-            <iframe src="https://www.terabox.com/sharing/embed?surl=&resolution=1080&autoplay=true" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.terabox.com/sharing/embed?surl=&resolution=1080&autoplay=true" 
+            frameborder="0" 
+            scrolling="no" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen></iframe>
             <div class="botones">
                 <button class="anterior <<" >anterior</button>
                 <button class="siguiente >>">siguiente</button>
