--- a/reproductor/reproducir.html
+++ b/reproductor/reproducir.html
@@ -27,13 +27,8 @@
 
 
         <div class="visor">
-        
-           <h4 class="viendo"></h4>    
-            <iframe src="https://www.terabox.com/sharing/embed?surl=&resolution=1080&autoplay=true" 
-            frameborder="0" 
-            scrolling="no" 
-            allow="autoplay; encrypted-media" 
-            allowfullscreen></iframe>
+            <h4 class="viendo"></h4>
+            <iframe src="https://www.terabox.com/sharing/embed?surl=&resolution=1080&autoplay=true&uk=4401246120582&slid=" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <div class="botones">
                 <button class="anterior <<" >anterior</button>
                 <button class="siguiente >>">siguiente</button>
