--- a/reproductor/reproducir.html
+++ b/reproductor/reproducir.html
@@ -18,6 +18,8 @@
     <script src="../js/listaCompleta/buscadorReproductor.js" defer></script>
     
     <title>Peliskal</title>
+
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
 </head>
 <body>
     <header>
@@ -139,5 +141,7 @@
             }
         });
     </script>
+
+
 </body>
 </html>
