--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <script src="js/buscador.js"></script>
     <title>Peliskal</title>
     <meta name="keywords" content="peliskal, peliculas, cartoons, series">
-   <!-- <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(580231, {whitelist: [], blacklist: ["peliskal.com.ar"]});</script>
---></head>
+</head>
 <body>
     <header>
         <div class="menu">
