--- a/Peliculas/peliculas.html
+++ b/Peliculas/peliculas.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZP3DQC2X7M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZP3DQC2X7M');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://peliskal.com.ar/iconoPeliskal.ico" type="image/x-ico">
@@ -19,20 +28,20 @@
 <body>
     <header>
         <div class="menu">
-           <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
+           <a href="https://peliskal.com"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
            <ol class="ol-menu">
-            <li><a href="https://peliskal.com.ar/Peliculas/peliculas.html">Peliculas</a></li>
-            <li><a href="https://peliskal.com.ar/Series/series.html">Series</a></li>
+            <li><a href="https://peliskal.com/Peliculas/peliculas.html">Peliculas</a></li>
+            <li><a href="https://peliskal.com/Series/series.html">Series</a></li>
         </ol> 
            <div class="buscadorContainer">
-           <input type="text" name="busacdor" id="buscador" placeholder="buscar pelicula">
+           <input type="text" name="busacdor" id="buscador" placeholder="buscar">
            <button class="buscadorBtn">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
               </svg>
            </button>
              </div>
-             
+             <span>Nos mudamos a  <a href="https://peliskal.com">peliskal.com</a></span>
             </div>
     </header>
     
