--- a/politicas/PolíticadePrivacidad.html
+++ b/politicas/PolíticadePrivacidad.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZP3DQC2X7M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZP3DQC2X7M');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://peliskal.com.ar/iconoPeliskal.ico" type="image/x-ico">
@@ -15,7 +24,7 @@
 <body>
     <header>
         <div class="menu">
-           <a href="https://peliskal.com.ar/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
+           <a href="https://peliskal.com/index.html"> <img src="https://i.ibb.co/Rc4SHKm/20230224-041427.webp" alt="LogoPeliskal"></a>
             </div>
     </header>
 
@@ -24,7 +33,7 @@
         <h1>Política de privacidad</h1>
         <p>
             <span>¿Quiénes somos?</span></br>
-            Texto sugerido: La dirección de nuestro sitio web es: <a href=" http://peliskal.com.ar/index.html"> http://peliskal.com.ar.</a>
+            Texto sugerido: La dirección de nuestro sitio web es: <a href=" http://peliskal.com/index.html"> http://peliskal.com.ar.</a>
         </p>
         
     </div>
